Python-Flask-Sample/k3d/03_nginx_ingress/ingress-class.yaml
# ingress-class.yaml
apiVersion: networking.k8s.io/v1beta1
kind: IngressClass
metadata:
  name: nginx
  annotations:
    ingressclass.kubernetes.io/is-default-class: "false"
spec:
  controller: nginx.org/ingress-controller
