Python-Flask-Sample/k3d/03_nginx_ingress/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-flask-sample
spec:                               # Desire state
  selector:                         # Finds pod
    matchLabels:
      app: python-flask-sample
  replicas: 3                       # Containers quantity
  template:                         # When Kubernetes creates Pods then follow this template
    metadata:
      labels:
        app: python-flask-sample
    spec:
      containers:
      - name: python-flask-sample
        image: ghcr.io/dieguini/python-flask-sample:main  # Don't use "latest" tag
        imagePullPolicy: IfNotPresent                     # What to do if image not found
        ports:
        - containerPort: 5000
        resources:
          limits:
            memory: "64Mi"
            cpu: "256m"
---
apiVersion: v1
kind: Service
metadata:
  name: my-release-nginx
spec:
  selector:
    app: python-flask-sample
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: 5000
  # type: NodePort
---
# apiVersion: networking.k8s.io/v1beta1 # for k3s < v1.19
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-nginx-service
            port:
              number: 5000
